templates/ICESI -Ejercicio.template
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Parameters":{
      "InstanceType":{
         "Type":"String",
         "Default":"t2.micro",
         "Description":"The Instance type for the EC2 Jenkins service.",
         "AllowedValues":[
            "t2.micro",
            "t2.medium"
         ]
      }
   },
   "Resources":{
      "VPC":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "CidrBlock":"10.0.0.0/16",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-VPC"
               }
            ]
         }
      },
      "InternetGateway":{
         "Type":"AWS::EC2::InternetGateway",
         "Properties":{
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-DEV-IG"
               }
            ]
         }
      },
      "VPCInternetGateway":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "InternetGatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "Subnet":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "CidrBlock":"10.0.0.0/16",
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-DEV-SN-PUBLIC"
               }
            ]
         }
      },
      "RouteTable":{
         "Type":"AWS::EC2::RouteTable",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-DEV-RT-PUBLIC"
               }
            ]
         }
      },
      "RouteToInternet":{
         "Type":"AWS::EC2::Route",
         "DependsOn":"VPCInternetGateway",
         "Properties":{
            "RouteTableId":{
               "Ref":"RouteTable"
            },
            "DestinationCidrBlock":"0.0.0.0/0",
            "GatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "SubnetRouteTableAssociation":{
         "Type":"AWS::EC2::SubnetRouteTableAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"Subnet"
            },
            "RouteTableId":{
               "Ref":"RouteTable"
            }
         }
      },
      "NetworkAcl":{
         "Type":"AWS::EC2::NetworkAcl",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-DEV-ACL-PUBLIC"
               }
            ]
         }
      },
      "InboundNetworkFromPrivateSubnetAclEntry":{
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{
            "NetworkAclId":{
               "Ref":"NetworkAcl"
            },
            "RuleNumber":"100",
            "Protocol":"6",
            "RuleAction":"allow",
            "Egress":"false",
            "CidrBlock":"0.0.0.0/0",
            "PortRange":{
               "From":"0",
               "To":"65535"
            }
         }
      },
      "PutboundNetworkFromPrivateSubnetAclEntry":{
         "Type":"AWS::EC2::NetworkAclEntry",
         "Properties":{
            "NetworkAclId":{
               "Ref":"NetworkAcl"
            },
            "RuleNumber":"100",
            "Protocol":"6",
            "RuleAction":"allow",
            "Egress":"true",
            "CidrBlock":"0.0.0.0/0",
            "PortRange":{
               "From":"0",
               "To":"65535"
            }
         }
      },
      "PublicSubnetNetworkAclAssociation":{
         "Type":"AWS::EC2::SubnetNetworkAclAssociation",
         "Properties":{
            "SubnetId":{
               "Ref":"Subnet"
            },
            "NetworkAclId":{
               "Ref":"NetworkAcl"
            }
         }
      },
      "SecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupDescription":"Group of instances in public subnet. Allows connections from the internet.",
            "VpcId":{
               "Ref":"VPC"
            },
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8080",
                  "ToPort":"8080",
                  "CidrIp":"0.0.0.0/0"
               },
			   {
				"IpProtocol": "tcp",
				"FromPort": "22",
				"ToPort": "22",
				"CidrIp": "0.0.0.0/0"
				},
							   {
				"IpProtocol": "tcp",
				"FromPort": "1024",
				"ToPort": "65535",
				"CidrIp": "0.0.0.0/0"
				}
            ],
            "SecurityGroupEgress":[
               {
                  "IpProtocol":"tcp",
                  "FromPort":"8080",
                  "ToPort":"8080",
                  "CidrIp":"0.0.0.0/0"
               },
			   {
				"IpProtocol": "tcp",
				"FromPort": "22",
				"ToPort": "22",
				"CidrIp": "0.0.0.0/0"
				},
							   {
				"IpProtocol": "tcp",
				"FromPort": "1024",
				"ToPort": "65535",
				"CidrIp": "0.0.0.0/0"
				}
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":"ICESI-DEV-SG-PUBLIC"
               }
            ]
         }
      },
      "Ec2Instance":{
         "Type":"AWS::EC2::Instance",
         "Properties":{
            "KeyName":"TEST-ICESI",
			"ImageId":"ami-a1c641de",
            "InstanceType":{"Ref" : "InstanceType"},
			"NetworkInterfaces": [ {
				"AssociatePublicIpAddress": "true",
				"DeviceIndex": "0",
				"GroupSet": [{ "Ref" : "SecurityGroup" }],
				"SubnetId": { "Ref" : "Subnet" }
			} ]
         }
      }
   }
}
